update paper with main changes for resubmission

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -65,7 +65,7 @@ breaklinks=true,
 % End of preamble. Here it comes the document.
 \begin{document}
 
-\title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Quality and Expertise}\\ \vspace{0.3cm}}
+\title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Collaboration Structures}\\ \vspace{0.3cm}}
 
 %\numberofauthors{1}
 %\author{[anonymized author names and affiliations]}
@@ -108,9 +108,7 @@ John Chuang\\
 \input{../sections/abstract.tex}
 
 %\textcolor{red}{The following section is mandatory for accepted papers, but not needed for submissions for the June 1 deadline.}
-\keywords{
-	{\bf open collaboration, bi-partite networks, contribution performance}
-}
+\keywords{{\bf open collaboration, bi-partite networks, performance, coordination}}
 
 %\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
 
@@ -138,7 +136,7 @@ John Chuang\\
 \input{../sections/results.tex}
 \input{../sections/discussion.tex}
 \input{../sections/limitations.tex}
-\input{../sections/conclusion.tex}
+%\input{../sections/conclusion.tex}
 
 
 
@@ -183,8 +181,6 @@ John Chuang\\
 
 %\section{Acknowledgments}
 %One of the authors (T.M.) acknowledges support from the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
-%
-%This research was supported in part by the National Science Foundation through award CCF-0424422 (TRUST - Team for Research in Ubiquitous Secure Technology).
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
@@ -212,5 +208,5 @@ John Chuang\\
 % uncomment the following line:
 % \small
 \bibliographystyle{acm-sigchi}
-\bibliography{../tmaillart.bib}
+\bibliography{../tmaillart.bib,../additional.bib}
 \end{document}
