--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,6 +1,3 @@
 \begin{abstract}
-In open collaboration, knowledge is created and iteratively improved by a multitude of editors, who freely choose what should be their contributions. Each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories, and find how the complex structure of knowledge production influences article quality and editor expertise. While the wisdom of crowds is better pulled in some categories, multiple editors create marginal dis-value in others. These differences can be explained from the ability of communities to organize, as well as from the very nature of knowledge created.
-%, either requiring few experts, or on the contrary, a multitude of knowledge gatherers. 
-
-%We introduce and test a recursive algorithm toalgorithm to bi-partite networks of relations between two kinds of nodes (here, editors making changes to articles): the expertise of editors is assessed from the quantity and quality of articles they have edited. Conversely, the quality of an article depends on the number and the expertise of editors who have modified the article. And so on recursively. While wikiRanks incorporates only bi-partite links input information, we find high rank correlations ($\rho = 0.7\pm0.1$) with usual Wikipedia editors' expertise and articles' quality metrics. The wikiRanks algorithm also provides deep insights on the structure of online collaboration. We find that editors in some categories of Wikipedia articles achieve more quality with a large number of editors per article, while for other categories, quality is more achieved as a result of expertise of editors.The algorithm we have developed to assess and understand individual contributions to Wikipedia, can be applied to any collaborative environment. 
+In open collaboration, knowledge is created and iteratively improved by a multitude of editors, who freely choose what should be their contributions. The quality of knowledge artifacts (e.g. article, source code file) is deeply tied to their individual expertise, and to their ability to achieve collaboration. Conversely, the expertise of contributors is a function of artifacts contributed to. Building upon a large stream of literature on the measurement of article quality and contributor expertise, we propose a recursive metric to measure to jointly measure how editor expertise influences the quality of articles, and how contributions to articles influence editor expertise. This {\it bi-partite network random walker} metric reveals the specific structure of cooperation and how the quality of articles is achieved in Wikipedia. We show that while the wisdom of crowds is well pulled in some categories, more editors per article can also create disvalue.
 \end{abstract}
