--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,36 +1,56 @@
 \section{Discussion}
-Building on the method of reflections previously used for global economic networks of production, we have applied and tested the {\it bi-partite network random walker} model in the context of Wikipedia open collaboration. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$. Moreover, the evolution of $\rho_e$ and $\rho_a$ of categories under editing, exhibit strong stability. In particular, the adequacy of article ranking is very high early on, and thereafter stationary, suggesting that the model can quickly capture the quality of articles. For editor expertise, the adequacy increases steadily as categories get further developed. 
+To understand how the structure of collaboration influences the articles quality, we have applied and tested the {\it bi-partite network random walker} model in the context of Wikipedia. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$. Moreover, $\rho_a$ remains stable over time, while $\rho_e$ increases, suggesting that the model reflects better editor expertise as more contributions to a broader set of articles occur, i.e., when the bi-partite network gets more densely connected. This suggests that loosely connected entities, either articles and editors, cannot be ranked accurately. From Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are always significantly more editors than articles for each category. Hence, the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. 
 
-This difference might be due to the roughness of the actual metrics for editors $\bar{w}_e$, expressed in labor-hours, compared to the quality of $\bar{w}_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editor ranking with $\bar{w}_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of articles edited) to capture well the expertise of editors. This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $\mathbf{\mathit{M}}$. While it will require further investigation to explain, we interpret this result in the following way: from Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are always significantly more editors than articles for each category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to correctly rank editors because there are more editors compared to the number of articles in a given category.
+To account for single-minded editors who have concentrated on only one or few articles, we have used an input matrix of edit counts (instead of a binary matrix). As shown on Figure \ref{fig:binary_vs_editcount}, the model using the {\it edit counts} input matrix accounts nearly as well for article quality, while it does a much worse job ranking editor expertise compared to a {\it binary} input matrix. Counterintuitively, we observe a ``less is more" situation: the number of articles ever touched by an editor reflects better the structure of collaboration and value creation,  compared to edit counts, even though the labor-hour ground truth metric for editors is more a proxy of number of edits rather the number of articles ever touched \cite{geiger2013}. 
 
-%We have also found $\alpha \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This fact tells actually a lot about the model.  The actual metric for editor expertise takes only into consideration the labor hours \cite{geiger2013}, and the more time is spent editing a category, the more likely the editor will have modified a large quantity of articles. The value of $\alpha$ can therefore be explained entirely by the nature of the ground-truth metric. Although it would require further testing with a broad variety of metrics, it seems that the {bi-partite network random walker} model can {\it tune} to whatever ground-truth metric used for calibration. In other words, the values of $\alpha$ and $\beta$ only reflect the structure of value creation in open collaboration, {\it given} the chosen ground-truth metrics. 
+\begin{figure}[!t]
+\centering
+%\includegraphics[width=0.9\columnwidth]{../Figures/bin_comp.png}.
+\caption{Comparison between $\rho_a$ (upper panel) and $\rho_e$ (lower panel) for two input matrices: {\it binary} (black) and {\it edit counts} (blue) for each category numbered according to Table \ref{tab:maxbeta}. While taking {\it edit counts} as the input matrix only marginally increases $\rho_a$, it drastically reduces $\rho_e$.}
+\label{fig:binary_vs_editcount}
+\end{figure}
 
-We have also found $\alpha \approx 0$ for all categories. This result shares similarity  with \cite{keegan2012}, who found that "editor experience and the features of articles in their contribution history have a stronger influence on self-organization than article features and the attributes of their editors". In this way if editor expertise is more important, it makes sense that we find it, $\alpha$, to be a near-constant (although that doesn't explain why it should be zero). Allowing for a moment, $\alpha = 0$ we can simplify our analytic solutions to gain a more intuitive interpretation of the calibration results.
+We now discuss how the fitted parameters $\alpha^{*}$ and $\beta^{*}$ inform on the structures of collaboration in Wikipedia categories. On the one hand, we have found $\alpha^{*} \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This result is compatible with previous results by Keegan et al. \cite{keegan2012}. On the other hand, $\beta^{*}$ varies across categories with values ranging from $0$ to $1.52$ at the last snapshot. $\beta$ can be considered as a measure of the structure of collaboration: the smaller $\beta$ the more articles benefit from more editors. On the contrary, the larger $\beta$ the more articles benefit from less editors. 
+Consider the highest $\beta$ found, on category {\it Sexual acts}. Because this category could be considered taboo or perverse, articles are the least collaboratively edited. The high $beta > 1$ means that an editor with many edits will see her ranking drop. Indeed, it should not be taken for granted that contributions are necessarily positive. Wikipedia constantly faces a vast amount of vandalism and ``edit-warring", which often has a juvenile and lewd nature \cite{}. Because of their socially-sensitive nature, articles about sexual acts are particularly prone to attracting vandals or edit-warring behaviors. Therefore, editors making the most edits are not necessarily the ones improving article quality, as we would typically expect. This result is again compatible with previous research, which has shown that, in some circumstances, most active editors exhibit deleting behaviors that lower metric-based article quality ratings \cite{kane2011}. 
 
- %\begin{cases}
- \begin{equation}
- w^{*}_{e} \sim k_{e}^{1-\beta}\langle k_{a}^{-\alpha} \rangle_{e},\\
- w^{*}_{a} \sim k_{a}^{1-\alpha}\langle k_{e}^{-\beta} \rangle_{a}
- \end{equation}
- %\end{cases}
- 
-Then letting $\alpha = 0$, we can simplify to:
-%\begin{cases}
-\begin{equation}
- w^{*}_{e} \sim k_{e}^{1-\beta}\\[7pt]
- w^{*}_{a} \sim k_{a}
- \langle k_{e}^{-\beta} \rangle_{a}\\[7pt]
- \end{equation}
- %\end{cases} 
+Conversely, the category {\it Military History of the US} is famous for its self-organized task-forces. At the latest snapshot $\beta = 0$, and this is the only category we have analyzed, which exhibits $\beta$ consistently negative over time. Hence, the marginal quality of articles is positively influenced by the number of editors touching the article. Unsurprisingly, {\it Military History of the US} is literally a ``WikiProject" with a hierarchy of coordinators, an active IRC channel, and a mailing list. As a result of better coordination, there is less edit-warring and more efficient contributions: editors edit articles with well-defined task at hand. 
 
- 
- Recalling that the variables $\alpha$ and $\beta$ control the preferential attachment to move to more connected editor or article nodes in the transition matrix. We will talk about the importance of "super-users" and "super-articles" as those nodes nodes that would be effected greatly by preferential attachment.  We concentrate on our unfix variable, $\beta$, as it influences editor ranking \ref{fig:influence_editors} and article ranking.\ref{fig:influence_artilces}. Over all categories and snapshots we found $-2 < \beta < 2$, which has a related spectrum of interpretations. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". 
- 
-Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles are the least collaboratively edited; the high $beta > 1$ means that many edits - albeit very slightly - hurt your ranking does \ref{fig:influence_editors}. While this may seem counter intuitive, an explanation can be seen through the fact that Wikipedia is notable for a vast and constant amount of vandalism and "edit-warring", which often has a juvenile and lewd nature. Previous Wikipedia research has shown this unintuitive result, that on some articles most active editors exhibit deleting behavior that would lower metric-based article quality ratings \cite{kane2011}. Articles about Sexual Acts, because of their socially-sensitive nature are particularly prone to attracting vandals or edit-warring behavior. Therefore the editors making the most edits are not necessarily the ones improving article quality, as we would typically expect.
 
-This category is at the chaotic end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is very positively proportional to the number of editors touching the article \ref{fig:influence_artilces}. This is no coincidence, we chose this category, because it has a reputation for being very organized. Military History is a "WikiProject" with a hierarchy of coordinators, an IRC channel, and a mailing list. As a result of the coordination there is less edit-warring and more focused attention in the category. Each visit to the page by good editors has a definite, productive task at hand. This can also be seen by the $\beta \leq 0$ editor influence \ref{fig:influence_editors}, that super-users are linearly or super-linearly rewarded in rank for their contributions. It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \cite{keegan2012}, found that "coordination demands influence the tendency of editors with similar levels of experience to work together". In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. 
+%It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \cite{keegan2012}, found that ``coordination demands influence the tendency of editors with similar levels of experience to work together". \textcolor{red}{In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. }
 
-That fact that we find two very different cases of collaborativeness is important in explaining previous contention in computer support collaborative work sphere. Early on research was release to suggest that high editor inequality among editors is related to high article quality \cite{kittur08}. The intuition is that the top superusers can be unrivaled in shaping the articles. We have certainly found this to be true in the Military History example. Yet later, it was found that editor inequality relating to article quality is unsupported, and editor inequality relating to coordination is false \cite{arazy}. In the case of chaotic categories like Sexual Acts we found this case, where the top users cannot make as much a positive impact as otherwise. These two seemingly contradictory findings can be explained through our measure of collaborativeness. Each part of wikipedia can exhibit different and measurable relationships between editor quality and article quality - that is our collaborativeness \beta. 
+
+
+
+%This fact tells actually a lot about the model.  The actual metric for editor expertise takes only into consideration the labor hours \cite{geiger2013}, and the more time is spent editing a category, the more likely the editor will have modified a large quantity of articles. The value of $\alpha$ can therefore be explained entirely by the nature of the ground-truth metric. 
+
+%This difference might be due to the roughness of the actual metrics for editors $\bar{w}_e$, expressed in labor-hours, compared to the quality of $\bar{w}_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editor ranking with $\bar{w}_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of articles edited) to capture well the expertise of editors. 
+
+%Although it would require further testing with a broad variety of metrics, it seems that the {bi-partite network random walker} model can {\it tune} to whatever ground-truth metric used for calibration. In other words, the values of $\alpha$ and $\beta$ only reflect the structure of value creation in open collaboration, {\it given} the chosen ground-truth metrics. 
+
+
+% Allowing for a moment, $\alpha = 0$ we can simplify our analytic solutions to gain a more intuitive interpretation of the calibration results.}
+
+% %\begin{cases}
+% \begin{equation}
+% w^{*}_{e} \sim k_{e}^{1-\beta}\langle k_{a}^{-\alpha} \rangle_{e},\\
+% w^{*}_{a} \sim k_{a}^{1-\alpha}\langle k_{e}^{-\beta} \rangle_{a}
+% \end{equation}
+% %\end{cases}
+% 
+%Then letting $\alpha = 0$, we can simplify to:
+%%\begin{cases}
+%\begin{equation}
+% w^{*}_{e} \sim k_{e}^{1-\beta}\\[7pt]
+% w^{*}_{a} \sim k_{a}
+% \langle k_{e}^{-\beta} \rangle_{a}\\[7pt]
+% \end{equation}
+% %\end{cases} 
+
+
+
+
+
+%\textcolor{red}{That fact that we find two very different cases of collaborativeness is important in explaining previous contention in computer support collaborative work sphere. Early on, research was release to suggest that high editor inequality among editors is related to high article quality \cite{kittur08}. The intuition is that the top superusers can be unrivaled in shaping the articles. We have certainly found this to be true in the Military History example. Yet later, it was found that editor inequality relating to article quality is unsupported, and editor inequality relating to coordination is false \cite{arazy}. In the case of chaotic categories like Sexual Acts we found this case, where the top users cannot make as much a positive impact as otherwise. These two seemingly contradictory findings can be explained through our measure of collaborativeness. Each part of wikipedia can exhibit different and measurable relationships between editor quality and article quality - that is our collaborativeness $\beta$. }
 
 %$\mathbf{M}$ : most basic measure of collaboration, which represents the bi-partite network contributions to articles by editors: Here, we consider the simplest information available on collaboration: has an editor modified an article at any point in time or not ?
 
