--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -1,8 +1,23 @@
 \section{Related Work}
-In the collective contribution space, and in Wikipedia in specific, it has been suggest that editor and article quality are reliant on each other \cite{hu07}. This of course would suggest a model of a bi-partite structure -- networks with two node types -- which in Wikipedia related research has also been used to predict editing patterns \cite{yang14}. Our model of {\it bi-partite random walkers} follows in the lineage of the global economy of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The proposed recursive {\it method of reflections} helps understand the competitive advantage (i.e. {\it fitness}) of countries from the types of products they sell, and moreover, whether other countries export similar  (i.e. {\it ubiquitous}) products. The key insight is that most competitive countries are found to not only export non-ubiquitous products, for which they can charge higher price, but also ubiquitous ones. The model of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
+The structure and dynamics of individual and collective contributions have since long been recognized by researchers as primary factors for the achievement of high quality content, starting with scientific publications \cite{newman2001} and open collaboration projects \cite{bryant2005}. In the meantime, some of these open collaboration projects have tremendously increased their size and the number of their contributors, making it hard to assess the value of each knowledge artifact, even by intensive peer-review. Wikipedia, the iconic success story of open collaboration, has faced such a challenge of assessing the quality of its articles and the expertise of editors. While a lot of peer-review is performed by editors and administrators, the quantity of articles makes it hard to control all content, and keep it continuously up-to-date. A variety of {\it bots} patrol Wikipedia to prevent undesired changes (vandalism), which could undermine the reputation of the collaborative encyclopedia \cite{}. Similarly, the idea of bots to patrol the quality of articles has emerged, with various methods based on word count \cite{blumenstock2008sizematters}, the general structure of articles \cite{wang2013tell}, the revision history \cite{hu2007articlequality}, the patterns of changes between article versions \cite{woehner2009}, or a combination of types, volume of edits and editor expertise \cite{kane2011}. Editor expertise has also been investigated by considering the total number of words, the number of edits made, or the longevity of edits \cite{adler2008measuringauthor}, as well as time spent making edit sessions \cite{geiger2013}, or even the number of barnstars collected \cite{Kriplean2008}. More specific features of editors received the attention of researchers, such as creative editing \cite{iba2010}, how power editors differ from normal editors \cite{panciera2009}, and the influence of the type of contributors on the quality of articles \cite{stein2007}.
 
-Apart from networks of economic competition, collaboration networks have been studied early on in network sciences, in particular for networks of co-authorship in scientific publications \cite{newman2001}, as well as patterns of self-organization in bi-partite networks of actors-movies \cite{ramasco2004self}. Similarly, the analysis of patterns in Wikipedia bi-partite networks confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. In the same study, clustering of densely connected cliques into larger modules \cite{guimera2007module} showed that editors clustered by interest with higher coordinated efforts in densely populated clusters \cite{jesus2009}.
+The effort to measure article quality and editor expertise has extended to predicting the quality of contributions \cite{druck2008learning,zeng2006computingtrust}, developing reputation systems for editors \cite{adler2007contentdriven}, and identifying editor candidates for promotion \cite{burke2008taking}.
 
-Recent results show that the contribution dynamics of successful open source projects, stem from critical cascades of iterative improvements (commits), which in turn lead to super-linear {\it productive bursts} of contributions \cite{sornette2014howmuch}.  The conditions of emergence of productive bursts, include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. 
+Interestingly, the difficulty to assess the quality of artifacts and the expertise of editors contrasts sharply with the ease to make the same evaluation with software code. In a Matlab experiment for solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, for the time being, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments.
 
-However, most empirical results in research on open collaboration was unable to uncover the mechanisms of value creation and performance, mainly because of the {\it bottom-up} emerging properties of peer-production \cite{benkler2002}.  The only notable result in this field was found during a series of Matlab contests aimed at collectively solving NP-hard problems. It was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments. For Wikipedia, metrics such as edit or byte counts are widely used \cite{burke2008taking}.  To overcome the roughness of these metrics, recent efforts have been undertaken to develop stronger measures, to assess the expertise of contributors \cite{geiger2013}, as well as the quality of articles \cite{wang2013tell}. Nevertheless, these metrics provide limited insights on how editor expertise and article quality are creation collective contributions.
+Another complication of open collaboration, and presumably its main value-added, is the coordination between contributors, and how it helps generate value through through peer-review \cite{hu2007articlequality,wilkinson2007}, implicit and explicit coordination \cite{kittur2008}, quantity and span of contributions regarding local and global networks\cite{arazy2010determinants}. Similarly, the position of articles within local and global networks of Wikipedia is significantly related to article quality \cite{kane2009}. It was also found that editors clustered by interest with higher coordinated efforts in densely populated clusters \cite{jesus2009}.  The effects of diversity on group productivity seem to increase group productivity \cite{chen2010}.
+
+While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can be also be undermined by inadequate coordination \cite{kittur2009coordination}.  It has also been found that prior experience and article attribute influence the quality of collaboration \cite{keegan2012}. 
+
+%Network characteristics and the value of collaborative user-generated content \cite{ransbotham2012network}  $\rightarrow$ considers only that information flows from one article to another through contributors. In this network approach, editors are ``mediators" of concepts.
+
+%\textcolor{red}{count of articles by editors show also the ``span" of knowledge or skills. Our model doesn't account for editors who have topic specific skills, rather than wiki-formatting skills.}
+
+The connection between article quality and editor expertise is present in nearly all literature aiming to understand of the value of Wikipedia. The typical structure of networks with edges that connect uniquely two kinds of nodes is called {\it bi-partite} \cite{newman2001}. The analysis of patterns in Wikipedia bi-partite networks confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. A more detailed analysis of medical and health-related articles on Wikipedia, showed that the position of articles in the bi-partite network of articles and editors significantly influenced its quality \cite{kane2009}. Bi-partite networks have also notably been used to study the patterns of self-organization of actors having collaborated in movies \cite{ramasco2004self}.
+
+Recent developments in the science of {\it bi-partite} networks has shown the feasibility to rank entities of each type through a recursive algorithm called  {\it method of reflections}.This method has been tested on the bi-partite network of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The model of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al.\cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
+
+%Recent results show that the contribution dynamics of successful open source projects, stem from critical cascades of iterative improvements (commits), which in turn lead to super-linear {\it productive bursts} of contributions \cite{sornette2014howmuch}.  The conditions of emergence of productive bursts, include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. 
+
+
+
