--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -1,7 +1,8 @@
 \section{Data}
+We seek to calibrate the bi-partite random walker model, and thus find the strongest signal on the collaborative structure of open collaboration. For that, we have to find values of $\alpha$ and $\beta$, which minimize the distance between rankings given by the model and some ground-truth metrics on editor expertise and article quality, obtained independently from the input matrix. We perform the model calibration for 13 snapshots (see Figure \ref{fig:snapshots})  for each of  the 12 categories of Wikipedia articles presented in Table \nolinebreak \ref{tab:statistics}. We have selected a spectrum of categories ranging from anarchy and edit-warring (e.g., {\it Sexual Acts}) to acknowledged high organization level (e.g., {\it Military history of the US})
 
-%\subsection{Construction of Matrix $M$}
-We seek to find values of $\alpha$ and $\beta$ that minimize the distance between rankings given by the bi-partite network random walker model, which takes the matrix $M$ as unique input, and ground-truth metrics on editor expertise and article quality, obtained independently from Wikipedia. We perform the model calibration for 13 snapshots (see Figure \ref{fig:snapshots})  for each of  the 12 categories of Wikipedia articles presented in Table \nolinebreak \ref{tab:statistics}. For each category and snapshot, we build the binary matrix $M$ by parsing all edit histories of all articles up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. In order to eliminate page vandals, we considered only editors who made 5 or more edits to any article in the category. We also discarded all software robots (i.e. {\it bots}) that programmatically edit Wikipedia. 
+
+For each category and snapshot, we build the binary matrix $M_{ea}$ by parsing all edit histories of all articles up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. In order to eliminate page vandals, we considered only editors who made 5 or more edits to any article in the category. Even though they contribute greatly to the emergence of quality in Wikipedia \cite{}, we have not considered the discussion pages associated to each article. We also discarded all software robots (i.e. {\it bots}) that programmatically edit Wikipedia. 
 
 \begin{table}
 \begin{tabular}{|l|c|c|c|}
@@ -47,13 +48,16 @@ To calibrate $\alpha$ and $\beta$, we resorted to state-of-the-art ground-truth 
 \end{cases}
 \end{equation}
 
-The set $(\alpha^*,\beta^*)$ characterizes how value flows from editors to articles, and from articles to editors, in the bi-partite network of collaboration in Wikipedia.
+The set $(\alpha^*,\beta^*)$ characterizes how the structure of collaboration creates values in each Wikipedia category. To calibrate the model, we have used ground-truth metrics for article quality and editor expertise. 
 
-The ground-truth metrics were chose after a survey of the computer supported collaborative work literature. In the realm of quantifying editor qualit, there is a stream on editor "trust" from \cite{adler07} \cite{adler08} \cite{zeng}, parse the revision history to look at text survival rates. However we decided on \cite{geiger2013} and use "labor hours" for its refined yet simple technique which is inline with the rest of our parsimonous techniques. Labour hours accounts for the well decried fact that all edits are not equal, and rather counts the temporal length and editor has spend editing. It is calculated for each editor by taking contribution history up to the snapshot point. All edits made within 1 hour of a previous edit are counted in an {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. 
+A variety of techniques for measuring article quality have been proposed, from a collection of word-count related metrics \cite{blumenstock2008sizematters} to analyzing persistent and transient contributions throughout revisions\cite{woehner2009}. We have selected metrics used on Wikipedia \cite{wang2013tell,klein}, which have also been used in the CSCW literature in different combinations \cite{kane2011} \cite{keegan2012}. Our measure of actual article quality is performed through a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) number of outgoing intra-Wiki links. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance. Even though these five article quality metrics do not directly incorporate information from the bi-partite network (e.g. number of contributors, number of edits), they might indirectly be related, as some contributors specialize in some types of editing, such as adding citations or systematically improving the structure of articles \cite{}.
 
-In the case of article quality there are again many possible techniques from a collection of word-count related metrics \cite{blumenstock} to analyzing the momentum of the "diff" sequence \cite{wohner}. We selected metrics already in operation on Wikipedia \cite{wang2013tell} \cite{klein}, and have also been used in the CSCW literature in different combinations \cite{kane2011} \cite{keegan2012}. Our measure of actual article quality is performed through a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) outgoing intra-Wiki links. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance.
+Editor expertise is even more difficult to address, as each article is a blend of the edits of several contributors, and disentangling remains a challenge, which has occupied Wikipedia researchers long before us, using techniques ranging from parsing the revision history to measuring text survival rate \cite{adler2008measuringauthor}. Although they are sophisticated, these metrics pose a variety of problems. For instance, some articles are likely to evolve not only because former editors introduced wrong statements, but simply because of new information brought to public attention. We decided to use ``labor hours" proposed by Geiger and Halfaker \cite{geiger2013}, which is calculated for each editor by taking contribution history up to the snapshot point. All edits made within $1$ hour of a previous edit are counted in an {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. 
+ The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. The labor hours doesn't incorporate only the time effort spent by  editors on a Wikipedia category. It does not tell how this time is spent in the number (resp. size) of edits actually made during a period, or whether the effort has been spent on one or multiple articles. In other words, we cannot distinguish a single minded user spending $100$ hours on a single article trying to get it to ``Feature Article status" from a user making $100$ stub articles for $1$ hour each.  However, it is clear that a highly contributing editor has more chance to touch more articles over time, but the metric does not if some editors have rather edited the same articles. How this effort is distributed and brings quality is precisely what the {\it bi-partite random walker} model can say that other metrics cannot.  In a nutshell, parameters $\alpha$ and $\beta$ describe the most likely structure of collaboration given calibration of the model to ground-truth quality and expertise metrics. The higher the correlation between the model and the exogenous metrics, the better the collaboration structure is captured by the model. 
 
-Since we are attempting to optimize the rank correlation between our model and ground-truth we must make the point on how they qualitatively differ, otherwise high correlations would come as no surprise. First lets turn our attention to editor rankings. Labor hours are focused around user editing and are completely agnostic to the page which has been edited. A single minded user spending 100 hours on a single article trying to get it to "Feature Article status" has made the same labor hour efforts as a user making 100 stub articles for an hour each. Yet depending on our amount of preferential attachment in our network, one or the other could be seen as a superior editor. Likewise on pages, an article text can be changed in 5 ways. The same edits could be made by one generalist editor or 5 specialist editors, and the ground-truth would not change. Depending on a different preferential attachment parameter in the model could rank each of these very differently.
+Finally, we shall discuss shortly the possibility that ground-truth article quality and editor expertise might be dependent. Again, it depends on the collaboration structure. In the extreme case where each article is produced by an editor, then the bi-partite random walker model collapses into a 1-dimensional problem, as well as the notion of collaboration. On the contrary, if all editors contribute to all articles, both editors and articles will all be equally ranked and the algorithm will not converge. A realistic solution lies in-between and is best captured by $\beta$.
 
-Finally a point should be made about whether our exogenous expertise and quality measures are independent. Earlier on links between expert editors and quality articles were claimed \cite{wilkshuber}, and would seem intuitive. Yet, subsequently, there have been claims against such universal links which point out that key social interactions are not accounted for with these measures \cite{kane2009}. Intuitively this link rests on the collaborativeness of the articles and editors in question. With collaboration expertise will transtlate into article quality. However, given antagonistic, warring- editors expertise will not improve article quality.
+% \textcolor{red}{Yet depending on our amount of preferential attachment in our network, one or the other could be seen as a superior editor. Likewise on pages, an article text can be changed in 5 ways. The same edits could be made by one generalist editor or 5 specialist editors, and the ground-truth would not change. Depending on a different preferential attachment parameter in the model could rank each of these very differently.}
+%
+%\textcolor{red}{Finally a point should be made about whether our exogenous expertise and quality measures are independent. Earlier on links between expert editors and quality articles were claimed \cite{wilkshuber}, and would seem intuitive. Yet, subsequently, there have been claims against such universal links which point out that key social interactions are not accounted for with these measures \cite{kane2009}. Intuitively this link rests on the collaborativeness of the articles and editors in question. With collaboration expertise will transtlate into article quality. However, given antagonistic, warring- editors expertise will not improve article quality.}
 
