--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -1,10 +1,14 @@
 \section{Introduction}
-In online open collaboration, units of knowledge such as open source code files, Wikipedia articles,  3D-printing designs, are usually produced and improved collectively by a multitude of contributors. Some people devote numerous hours of labor improving existing content and adding new features, while most contributors only make minor changes. Yet, in addition to the power of the few, a mass of small changes can make the difference as a form of emergent collective intelligence \cite{kittur2007power}.  This new form of labor organization, underlying open collaboration, is called peer-production, and heavily relies on Internet communication systems to be effective \cite{benkler2002}. As the Internet has become pervasive in modern societies, open collaboration has permeated to a broad variety of social contexts and industries \cite{benkler2011leviathan}. 
+In online open collaboration, knowledge artifacts such as open source code files, Wikipedia articles,  3D-printing designs, are usually produced and improved collectively by a multitude of contributors. Some people devote numerous hours of labor improving existing content and adding new features, while most contributors only make minor changes. Yet, in addition to the power of the few, a mass of small changes can make the difference as a form of emergent collective intelligence \cite{kittur2007power}.  As the Internet has become pervasive in modern societies, open collaboration has permeated to a broad variety of social contexts and industries \cite{benkler2011leviathan}. 
 
-Nonetheless, in the absence of formal rules that organize open collaboration, it has remained nearly impossible to account for individual contributions in the production of high quality and often reliable knowledge, as demonstrated for instance for Wikipedia \cite{giles2005internet}. Indeed, the most basic component of peer-production is {\it task self-selection}: participants in open collaboration freely choose how and when to contribute, with none or very limited vertical organization \cite{benkler2002}.
+Despite ``bottom-up" self-organization, participants in open collaboration collectively can achieve  the production of high quality and often reliable knowledge, as demonstrated for instance for Wikipedia \cite{giles2005internet}. This new form of labor organization is called peer-production and it usually heavily relies on Internet communication systems to be effective \cite{benkler2002}. Peer-production is based on {\it task self-selection} and {\it peer-review} \cite{benkler2002}. As a result, participants decide to contribute according to their skills. In turn, participants build further experience from their contributions, and so on, following a virtuous circle.
 
-To add to the complexity of self-organized open collaboration projects, many communities exhibit critical cascades of iterative improvements, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. These highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities. To enable productive bursts, a number of conditions must be met, which include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. Unfortunately, the dynamics of contributions are deeply entangled, and the ways individual inputs affect the value of collectively produced knowledge has remained largely obscure. 
+Because open collaboration enjoys a truly horizontal organization, the dynamics of contributions are contingent to the heterogenous motivations and incentives of participants \cite{vonKrogh2012}, and some knowledge artifacts enjoy various attention from the community over time, with time localized bursts for hot topics \cite{keegan2013hotoff}. These  highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities \cite{vonkrogh2014designing}. They can be rationalized by critical cascades of both individual contributions and interactive community-based iterative improvements \cite{sornette2014howmuch}. 
 
-In this paper, we recognize that the value of each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We therefore examine open collaboration projects, and their evolution, as a simple network that relates knowledge units and contributors. We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories of articles, and we show how the structure of contribution to knowledge can be disentangled, and how this structure, genuine to categories, influences the quality of knowledge produced and the expertise of editors.
+But {\it individual} versus {\it interaction-based} improvement mechanisms can hardly be disentangled, and the outcome of experiments on small groups in social psychology on group performance have shown mixed results \cite{shaw1932comparison}. Typical group sizes in open collaboration range from a few to several hundreds of contributors, which create coordination problems \cite{halfaker2013}. Moreover, open collaboration projects unfold over large time scales of several years, sometime decades, and the lurking and learning-by-doing components play a crucial role in the engagement of contributors \cite{vonkrogh2003}.
 
-The paper is organized as follows. The reader is first introduced to relevant literature. The method, data employed and the results are then presented and discussed. We finally present future research directions and conclude.
+To understand the origins of cooperation structures and quality in open collaboration, we posit that the value of each knowledge artifact (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors, as potential witnesses of potential mistakes or outdated information \cite{}. Conversely, the expertise of contributors is a function of artifacts contributed to \cite{}.  Hence, we recognize the {\it directed}, {\it bi-partite} and {\it recursive} nature of the interplay of value between artifacts and contributors \cite{kane2009}.
+
+To measure how artifacts benefit from a larger number of editors with a given expertise, and how editors benefit from having contributed to more artifacts of some quality, we propose a {\it bi-partite network random walker} algorithm, which a two-node type generalization of the pageRank algorithm \cite{page1999pagerank}. We calibrate the algorithm on 12 Wikipedia categories of articles, and we show, at the level of each category, how articles do (not) benefit from the intervention of more editors. 
+
+The rest of this paper is organized as follows. We first expose the reader to the large literature on Wikipedia measuring article quality, editor expertise and their mutual interplay. We then introduce the intuition behind the {\it bi-partite network random walker} algorithm, as well as its implementation for the present study. Data employed and the results are then presented and discussed. We finally present the limitations and future research directions.
