--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -1,10 +1,10 @@
 \section{Method}
 \label{method}
-Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects. In particular, when projects do not involve writing software code, they can hardly be compiled, executed and tested on computers. As exemplified in Wikipedia, the most common way to code knowledge is natural language (e.g. Chinese, English, Spanish, French, German), which can hardly be systematically tested for performance. Natural language is indeed the realm of subjective interpretation by humans. 
+\textcolor{red}{Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects.} In particular, when projects do not involve writing software code, they can hardly be compiled, executed and tested on computers. As exemplified in Wikipedia, the most common way to code knowledge is natural language (e.g. Chinese, English, Spanish, French, German), which can hardly be systematically tested for performance. Natural language is indeed the realm of subjective interpretation by humans. 
 
-Here, we present a method to model value creation and performance in such environments. This method neither relies on the content or on subjective metrics, such as the number of edits, nor on the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions. Only the number and the expertise of editors bring value to an article.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
+Here, we present a method to model \textcolor{red}{(measure?)} value creation and performance in such environments. This method neither relies on the content or on subjective metrics, such as the number of edits, nor on the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions \cite{}. Only the number and the expertise of editors bring value to an article \cite{wilkinson2007}.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
 
-For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea}$ of all editors having contributed to a Wikipedia category of articles. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M_{ea}$ only shows which editors have ever touched an article. We convert to a binary categorical input for this matrix because of the precedent set in \ref{kane2011} \ref{keegan2012} \ref{geiger2013}, which each seek to move beyond the importance of edit count, claiming it to be spurious data when imagining the graph of editors, or measuring editor experience. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M_{ea}$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M_{ea}$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editor expertise and article quality.
+For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea}$ of all editors having contributed to a Wikipedia category of articles. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M_{ea}$ only shows which editors have ever touched an article. We convert to a binary categorical input for this matrix because of the precedent set in \cite{kane2011,keegan2012,geiger2013}, which each seek to move beyond the importance of edit count, claiming it to be spurious data when imagining the graph of editors, or measuring editor experience. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M_{ea}$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M_{ea}$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editor expertise and article quality.
 
 \begin{figure*}[!t]
 \centering
@@ -24,7 +24,7 @@ Given $M_{ea}$, the simplest way to assess the contribution value, the {\it expe
 \label{HHinit}
 \end{equation}
 
-are the zero\textsuperscript{th} order of our algorithm. They are the initial step of the {\it method of reflections} proposed by Hidalgo et al. \cite{hidalgo2007,hidalgo2009}, which derives the value of producing entities (i.e. editors) from products (i.e. articles), and {\it vice versa}. To help capture the intuition behind the method of reflections for open collaboration, we walk through the first and second iterations, as they are adapted to our study of Wikipedia:
+are the zero\textsuperscript{th} order of our algorithm. They are the initial step of the {\it method of reflections} proposed by Hidalgo et al. \cite{hidalgo2007,hidalgo2009}, which derives the value of producing entities (i.e. editors) from products (i.e. articles), and {\it vice versa}. To help capture the intuition behind the method of reflections for open collaboration, we walk through the first and second iterations:
 
 \begin{itemize}
   \item {\bf 1\textsuperscript{st} order iteration,}  
@@ -32,7 +32,6 @@ are the zero\textsuperscript{th} order of our algorithm. They are the initial st
   \item {\bf Articles}: If an article has been edited by higher expertise editors, it is of higher quality. That is, quality is a function of expertise calculated from zero\textsuperscript{th} iteration expertise scores.
   \item {\bf Editors}: Conversely, if an editor has contributed to higher quality articles, her expertise is higher. That is, expertise is a function of quality calculated from zero\textsuperscript{th} iteration quality scores.
   \end{itemize}
-  \pagebreak
   \item {\bf 2\textsuperscript{nd} order iteration,}
     \begin{itemize}
   \item {\bf Articles}: If an article has been changed by higher expertise editors who have edited higher value articles, which in turn have been edited by higher expertise contributors, the article quality is higher. That is, quality is a function of expertise calculated from 1\textsuperscript{st} iteration expertise scores.
@@ -41,17 +40,19 @@ are the zero\textsuperscript{th} order of our algorithm. They are the initial st
  \item {\bf And so on, recursively.}\\
 \end{itemize}
 
-Although interpretation is difficult past the very first iteration steps, at each iteration, the algorithm incorporates additional information on the quality of the articles and expertise of editor from the neighboring nodes in the bi-partite network. The higher order iterations of the method of reflections are written as,
-
-\begin{equation}
-\begin{cases}
- u_{e}^{(n+1)} = \frac{1}{k_{e}}\sum_{a=1}^{N_{a}} M_{ea} \, u_{a}^{n}\\[7pt]
- u_{a}^{(n+1)} = \frac{1}{k_{a}}\sum_{e=1}^{N_{e}} M _{ea}\, u_{e}^{n}\\
-\end{cases}
-\label{HHhigher}
-\end{equation}
-
-The method of reflections however suffers from a problem, which is rooted in the equal weights given to article and editor scores obtained at the previous iteration. As a result, the method converges to a fixed point with all editors (resp. all articles) having the same value, as a case of consensus dynamics \cite{caldarelli2012network}. It has therefore been proposed to consider giving variable weights to the scores from the previous iteration as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted in Figure \ref{fig:jumpers}. The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise). The matrix $M_{ea}$ determines whether a jump between each pair of nodes is possible. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. Conceptually, the {\it bi-partite network random walker} model is an extension of the single node type (i.e. Web pages) {\it Page Rank} Google search algorithm \cite{page1999pagerank} to two kind of nodes.
+Although interpretation is difficult past the very first iteration steps, at each iteration, the algorithm incorporates additional information on the quality of the articles and expertise of editor from the neighboring nodes in the bi-partite network. The higher order iterations 
+%of the method of reflections are written as,
+%
+%\begin{equation}
+%\begin{cases}
+% u_{e}^{(n+1)} = \frac{1}{k_{e}}\sum_{a=1}^{N_{a}} M_{ea} \, u_{a}^{n}\\[7pt]
+% u_{a}^{(n+1)} = \frac{1}{k_{a}}\sum_{e=1}^{N_{e}} M _{ea}\, u_{e}^{n}\\
+%\end{cases}
+%\label{HHhigher}
+%\end{equation}
+%
+% variable weights to the scores from the previous iteration
+can be modeled as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted in Figure \ref{fig:jumpers}. \textcolor{red}{The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise)}. The binary matrix $M_{ea}$ determines whether a jump between each pair of nodes is possible. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. Conceptually, the {\it bi-partite network random walker} model is an extension of the single node type (i.e. Web pages) {\it Page Rank} Google search algorithm \cite{page1999pagerank,kleinberg1999} to two kind of nodes.
 
 \begin{figure}[!t]
 \centering
@@ -60,7 +61,8 @@ The method of reflections however suffers from a problem, which is rooted in the
 \label{fig:jumpers}
 \end{figure}
 
-According to  Caldarelli et al. \cite{caldarelli2012network}, we reformulate the method of reflections to account for jumps of the random walker on the bi-partite network of editors and articles. We call $w^{(n)}_e$ the expertise of an editor and $w^{(n)}_a$ the quality of an article at the $n^{th}$ iteration. We define the following Markov process on the bi-partite network of collaboration, 
+%According to  Caldarelli et al. \cite{caldarelli2012network}, we reformulate the method of reflections to account for jumps of the random walker on the bi-partite network of editors and articles. 
+We call $w^{(n)}_e$ the expertise of an editor and $w^{(n)}_a$ the quality of an article at the $n^{th}$ iteration, and we define the following Markov process on the bi-partite network of collaboration, 
 
 \begin{equation}
 \begin{cases}
@@ -79,19 +81,24 @@ G_{ae}(\alpha) = \frac{M_{ea} k_{a}^{-\alpha}}{\sum_{a' = 1}^{N_a} M_{ea'} k_{a'
  \end{cases}
 \end{equation}
 
-The transition matrices $G_{ea}(\beta)$ and $G_{ae}(\alpha)$ depend only on the initial conditions: the binary matrix $M_{ea}$, as well as $k_e$ and $k_a$ given by (\ref{HHinit}). The variables $\alpha$ and $\beta$ control the transition probabilities in a similar way. We shall therefore explain only how $\beta$ influences the probability to jump from an article to an editor (i.e. the value of the article positively influences the editor's expertise). For $\beta = 0$, we recover the zero\textsuperscript{th} order iteration (\ref{HHinit}). For $\beta > 0$, the probability to jump from article $a$ to editor $e$ is a power law function $\sim 1/k_{e}^{\beta}$ of the sum of articles $k_{e}$  modified by editor $e$. Hence, the larger $k_{e}$, the lower the probability to jump from $a$ to $e$ relative to other editors. On the contrary, if $\beta < 0$ the probability to jump from an article to an editor is a positive function of the sum of articles modified by the editor. For $-1 < \beta < 0$, the function is concave, while for $\beta < -1$, the function is convex, which means that the more articles have been edited by the editor, the even more the positive influence on articles. In a nutshell, $\beta$ relates the amount of articles edited on the overall editor's expertise, which in turn has an influence on each edited article (along with the influence of other editors). If $\beta \gg 0$, the positive influence of the number of contributed articles on the editor's expertise decreases. If $\beta$ close to $0$, the number of contributed articles increases linearly the editor's expertise. The same considerations hold for $\alpha$ and the probability $G_{ae}(\alpha)$ to jump from an editor to an article (i.e. the expertise of the editor positively influences the quality of an article).
+The transition matrices $G_{ea}(\beta)$ and $G_{ae}(\alpha)$ depend only on the initial conditions: the binary matrix $M_{ea}$, as well as $k_e$ and $k_a$ given by (\ref{HHinit}), and are controlled only by parameters $\alpha$ and $\beta$.  We shall therefore explain only how $\beta$ influences the probability to jump from an article to an editor (i.e. the value of the article positively influences the editor's expertise). For $\beta = 0$, we recover the zero\textsuperscript{th} order iteration (\ref{HHinit}). For $\beta > 0$, the probability to jump from article $a$ to editor $e$ is a power law function $\sim 1/k_{e}^{~\beta}$ of the sum of articles $k_{e}$  modified by editor $e$. Hence, the larger $k_{e}$, the lower the probability to jump from $a$ to $e$ relative to other editors. On the contrary, if $\beta < 0$ the probability to jump from an article to an editor is a positive function of the sum of articles modified by the editor. For $-1 < \beta < 0$, the function is concave, while for $\beta < -1$, the function is convex, which means that the more articles have been edited by the editor, the even more the positive influence on articles. In a nutshell, $\beta$ relates the amount of articles edited on the overall editor's expertise. %which in turn has an influence on each edited article (along with the influence of other editors).
+If $\beta \gg 0$, the positive influence of the number of contributed articles on the editor's expertise decreases. If $\beta$ close to $0$, the number of contributed articles increases linearly the editor's expertise. The same considerations hold for $\alpha$ and the probability $G_{ae}(\alpha)$ to jump from an editor to an article (i.e. the expertise of the editor positively influences the quality of an article).
 
-After each iteration, we have expertise and quality scores, which allow for the ranking of editors and articles respectively. When the rankings for both editors and articles do not change in two successive iterations we consider that the {\it bi-partite network random walker} model has converged. We have verified that the method converges on all our 12 Wikipedia categories.  Figure \ref{fig:convergence} shows the evolution of expertise $w_e$ ranked among editors having contributed to articles in the {\it Feminist Writers} category on Wikipedia for the set of control parameters $(\alpha,\beta) =(0, 0.72)$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial low rank (i.e. with few articles edited), get a higher rank as the number of iterations increases. They most probably have edited and contributed to few, but high quality articles. Similarly, some initially high ranked editors, gradually drop in the ranking. They have edited many, but low quality articles. In the case of category {\it Feminist Writers}, the algorithm converges after $64$ iterations.
+%After each iteration, we have expertise and quality scores, which allow for the ranking of editors and articles respectively. When the rankings for both editors and articles do not change in two successive iterations we consider that the {\it bi-partite network random walker} model has converged. We have verified that the method converges on all our 12 Wikipedia categories.  
+Figure \ref{fig:convergence} shows the evolution of expertise $w_e$ ranked among editors having contributed to articles in the {\it Feminist Writers} category on Wikipedia for the set of control parameters $(\alpha,\beta) =(0, 0.72)$. We can see how the algorithm progressively ranks editors: some editors with initial low rank (i.e. with few articles edited), get a higher rank as more information is incorporated from neighboring nodes as the number of iterations increases. In that case ($\beta >0$), editors have edited and contributed to fewer, but higher quality articles (i.e. articles edited by more editors who have edited less articles). Similarly, some initially high ranked editors, gradually drop in the ranking. They have edited many, but lower quality articles. 
 
 \begin{figure}[!t]
 \centering
 \includegraphics[width=0.9\columnwidth]{../Figures/fem_editors_iter_converge.png}.
-\caption{Convergence of the ranked expertise $w_e$ of editors having contributed to articles in the Feminist Writers category on Wikipedia for arbitrary control parameters: $\mathbf{(\alpha,\beta) =(0, 0.72)}$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial lowest rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. Similarly, some initially high ranked editors, gradually drop in the ranking. In the case Wikipedia categories, the algorithm converges with clearly stable ranks, after $\mathbf{64}$ iterations.}
+\caption{Convergence of the ranked expertise $w_e$ of editors having contributed to articles in the Feminist Writers category on Wikipedia for arbitrary control parameters: $\mathbf{(\alpha,\beta) =(0, 0.72)}$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial lowest rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. Similarly, some initially high ranked editors, gradually drop in the ranking. In the case {\it Feminist Writers}, the algorithm converges after $\mathbf{64}$ iterations.}
 \label{fig:convergence}
 \end{figure}
 
+Upon calibration of the bi-partite random walker model with ground-truth metrics of article quality and editor expertise, the parameters $\alpha$ and $\beta$  directly informs how peer-production generates value through more broad collaboration (i.e. more articles edited by more editors), or on the contrary, more concentrated collaboration with small clusters of editors having touched less articles. 
 
-The parameters $\alpha$ and $\beta$ control how editors and articles influence each other at the level of the whole bi-partite collaboration network. Upon calibration with ground-truth editor expertise and article quality metrics, these control parameters thus directly inform on the structure of peer-production, and how contributions benefit the whole open collaboration project. 
+% describe how editors and articles influence each other at the level of the whole bi-partite collaboration network.
+%\textcolor{red}{We cannot calibrate and test because each category is different}
+
 
 %Whenever calibration shows that the evolution of $\alpha$ and $\beta$ can be predicted, then editor expertise and article quality can also be predicted up to statistical errors. 
 %Here, we explain the calibration steps for$\alpha$ and $\beta$ and how the control parameters inform on the structure of value creation in open collaboration. We also document the evolution of these parameters as Wikipedia categories get increasingly enriched with new contributions.
